Update presentation pages to correctly link PDF files

--- a/presentations/sustainability/index.html
+++ b/presentations/sustainability/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carbomica Presentation</title>
+    <title>Sustainability Presentation</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -39,11 +39,11 @@
 <body>
     <a href="../../index.html" class="back-link">← Back to Presentations</a>
     
-    <h1>Carbomica Presentation</h1>
+    <h1>Sustainability Presentation</h1>
     
     <div class="content">
         <h2>Presentation Slides</h2>
-        <iframe src="images/CARBOMICA Webinar 2.pdf" class="pdf-container"></iframe>
+        <iframe src="Carbon Footprint Estimations of Research Project Activities_CP0202 (1).pdf" class="pdf-container"></iframe>
     </div>
 </body>
 </html>
