Add download links for PDFs

--- a/presentations/carbomica/index.html
+++ b/presentations/carbomica/index.html
@@ -44,6 +44,7 @@
     <div class="content">
         <h2>Presentation Slides</h2>
         <iframe src="images/CARBOMICA Webinar 2.pdf" class="pdf-container"></iframe>
+        <p>If the PDF doesn't load above, you can <a href="images/CARBOMICA Webinar 2.pdf" download>download it here</a>.</p>
     </div>
 </body>
 </html>
