--- a/presentations/sustainability/index.html
+++ b/presentations/sustainability/index.html
@@ -44,6 +44,7 @@
     <div class="content">
         <h2>Presentation Slides</h2>
         <iframe src="Carbon Footprint Estimations of Research Project Activities_CP0202 (1).pdf" class="pdf-container"></iframe>
+        <p>If the PDF doesn't load above, you can <a href="Carbon Footprint Estimations of Research Project Activities_CP0202 (1).pdf" download>download it here</a>.</p>
     </div>
 </body>
 </html>
