Add comprehensive sustainability approach page and update main page with sustainability commitment

--- a/index.html
+++ b/index.html
@@ -81,6 +81,17 @@
                 </ul>
             </div>
         </div>
+
+        <div class="highlight-item">
+            <h3>Our Commitment to Sustainability</h3>
+            <p>We are committed to implementing evidence-based sustainability measures across all our research activities. View our comprehensive <a href="sustainability-approach.html">sustainability approach</a> to learn about our:</p>
+            <ul>
+                <li>Implementation of the <a href="https://www.ucl.ac.uk/sustainable/leaf/leaf-resources-and-materials" target="_blank">LEAF framework</a></li>
+                <li>Sustainable data practices using <a href="https://github.com/HIGH-Horizons/carbomica" target="_blank">HIGH Horizons tools</a></li>
+                <li>Travel optimization strategies</li>
+                <li>Monitoring and accountability measures</li>
+            </ul>
+        </div>
     </div>
 
     <h2>Our Sustainability Presentations</h2>
