--- a/sustainability-approach.html
+++ b/sustainability-approach.html
@@ -95,63 +95,53 @@
     <div class="strategy-card">
         <h2>Reduce, Reuse, Recycle</h2>
         <ul>
-            <li>Implementation of the <a href="https://www.ucl.ac.uk/sustainable/leaf/leaf-resources-and-materials" target="_blank">LEAF framework</a> across participating laboratories by 2025</li>
-            <li>Optimization of ultralow freezer storage to -70°C</li>
-            <li>Equipment-sharing arrangements between research partners</li>
-            <li>Reduction of single-use plastics</li>
-            <li>Standardized waste segregation protocols</li>
-            <li>View our detailed strategies in our <a href="presentations/carbomica/index.html">CARBOMICA presentation</a></li>
+            <li>Pursue <a href="https://www.mygreenlab.org/" target="_blank">My Green Lab certification</a> across participating laboratories by 2025, supported by dedicated sustainability managers</li>
+            <li>Optimization of ultralow freezer storage to -70°C and implementation of equipment-sharing arrangements between research partners</li>
+            <li>Reduction of single-use plastics and alignment with standards from accredited green laboratory initiatives</li>
+            <li>Implementation of strategies from the <a href="presentations/carbomica/index.html">CARBOMICA Framework</a> and <a href="presentations/sustainability/index.html">Carbon Footprint in Research Activities</a> guidelines</li>
         </ul>
     </div>
 
     <div class="strategy-card">
-        <h2>Sustainable Data Practices</h2>
+        <h2>Sustainable Data and Computing Practices</h2>
         <ul>
             <li>WhatsApp-based EMAs for paperless data collection</li>
-            <li>Cloud-based data storage and optimization</li>
-            <li>Utilization of <a href="https://github.com/HIGH-Horizons/carbomica" target="_blank">HIGH Horizons carbon management tools</a></li>
-            <li>Implementation of the <a href="https://www.aku.edu/about/environment/Pages/akdn-ghg-tool.aspx" target="_blank">Aga Khan Development Network's Carbon Management Tool</a></li>
-            <li>Follow the detailed <a href="https://www.aku.edu/about/environment/Documents/Guide%20to%20the%20Aga%20Khan%20Development%20Networks%20Carbon%20Management%20Tool.pdf" target="_blank">implementation guide</a></li>
+            <li>Cloud-based data storage and optimization using tools from <a href="https://github.com/HIGH-Horizons/carbomica" target="_blank">HIGH Horizons</a></li>
+            <li>Implementation of <a href="https://www.green-algorithms.org/" target="_blank">Green Algorithms</a> methodology for sustainable computational science</li>
+            <li>Environmentally conscious data analysis practices for large-scale modeling</li>
+            <li>Pre-purchase institutional inventory checks following international best practices</li>
         </ul>
     </div>
 
     <div class="strategy-card">
         <h2>Travel Optimization</h2>
         <ul>
-            <li>Alignment of participant visits with routine care schedules</li>
-            <li>Engagement of local research teams</li>
-            <li>Virtual-first meeting policy</li>
-            <li>Use of <a href="https://www.sustainabilityexchange.ac.uk/travel_better_package" target="_blank">Sustainability Exchange Travel Better package</a></li>
-            <li>Verified emission offsetting for necessary travel</li>
+            <li>Alignment of participant visits with routine antenatal care schedules</li>
+            <li>Engagement of local research teams for community-based activities</li>
+            <li>Virtual-first meeting policy with flight justification using the <a href="https://www.sustainabilityexchange.ac.uk/travel_better_package" target="_blank">Sustainability Exchange Travel Better package</a></li>
+            <li>Carbon offset through verified providers</li>
         </ul>
     </div>
 
     <div class="strategy-card">
         <h2>Monitoring and Accountability</h2>
         <ul>
-            <li>Regular tracking of emissions using validated frameworks</li>
-            <li>Quarterly progress reviews using LEAF metrics</li>
-            <li>Documentation of emission reduction achievements</li>
-            <li>Alignment with <a href="https://wellcome.org/grant-funding/guidance/environmental-sustainability-policy" target="_blank">Wellcome Trust's environmental policy</a></li>
+            <li>Implementation of validated emission measurement frameworks</li>
+            <li>Quarterly progress reviews using My Green Lab metrics</li>
+            <li>Documentation of emission reduction achievements (up to 68%) through strategic interventions</li>
+            <li>Knowledge sharing through our open-access platform</li>
         </ul>
     </div>
 
     <div class="resources-section">
-        <h2>Additional Resources</h2>
+        <h2>Key Resources and Guidelines</h2>
         <div class="resource-item">
-            <h3>Our Presentations</h3>
+            <p>Our strategies align with:</p>
             <ul>
-                <li><a href="presentations/carbomica/index.html">CARBOMICA Framework Implementation</a></li>
-                <li><a href="presentations/sustainability/index.html">Carbon Footprint in Research Activities</a></li>
-            </ul>
-        </div>
-        <div class="resource-item">
-            <h3>External Resources</h3>
-            <ul>
+                <li><a href="https://wellcome.org/grant-funding/guidance/environmental-sustainability-policy" target="_blank">Wellcome Trust's environmental policy</a></li>
                 <li><a href="https://www.ucl.ac.uk/sustainable/leaf/leaf-resources-and-materials" target="_blank">LEAF Framework Resources</a></li>
                 <li><a href="https://www.aku.edu/about/environment/Documents/Guide%20to%20the%20Aga%20Khan%20Development%20Networks%20Carbon%20Management%20Tool.pdf" target="_blank">AKDN Carbon Management Tool Guide</a></li>
-                <li><a href="https://www.sustainabilityexchange.ac.uk/travel_better_package" target="_blank">Travel Better Package</a></li>
-                <li><a href="https://wellcome.org/grant-funding/guidance/environmental-sustainability-policy" target="_blank">Wellcome Trust Environmental Policy</a></li>
+                <li><a href="https://climahealth.info/resource-library/carbomica-a-carbon-mitigation-and-resource-allocation-modelling-tool-for-the-healthcare-sector-in-east-africa/" target="_blank">CARBOMICA Resource Allocation Modelling Tool</a></li>
             </ul>
         </div>
     </div>
