Fix Wits PHR logo path in sustainability approach page

--- a/sustainability-approach.html
+++ b/sustainability-approach.html
@@ -161,7 +161,7 @@
     <header class="header">
         <div class="nav-container">
             <div class="logo">
-                <img src="assets/wits-phr-logo.png" alt="Wits PHR Logo">
+                <img src="assets/images/Wits_PHR_logo.png" alt="Wits PHR Logo">
             </div>
             <nav class="nav-menu">
                 <a href="index.html">Home</a>
