Hide social media icons until images are added

--- a/sustainability-approach.html
+++ b/sustainability-approach.html
@@ -151,11 +151,13 @@
 <body>
     <div class="top-bar">
         Conducting cutting-edge planetary health research
+        <!-- Social media links temporarily hidden until icons are added
         <div class="social-links">
-            <a href="#"><img src="assets/facebook-icon.png" alt="Facebook"></a>
-            <a href="#"><img src="assets/linkedin-icon.png" alt="LinkedIn"></a>
-            <a href="#"><img src="assets/twitter-icon.png" alt="Twitter"></a>
+            <a href="#"><img src="assets/images/facebook-icon.png" alt="Facebook"></a>
+            <a href="#"><img src="assets/images/linkedin-icon.png" alt="LinkedIn"></a>
+            <a href="#"><img src="assets/images/twitter-icon.png" alt="Twitter"></a>
         </div>
+        -->
     </div>
 
     <header class="header">
