Improve hyperlink visibility with underline styling
- Add underline to all links by default
- Keep navigation menu links clean with hover underline effect

--- a/sustainability-approach.html
+++ b/sustainability-approach.html
@@ -130,7 +130,7 @@
 
         a {
             color: var(--primary-blue);
-            text-decoration: none;
+            text-decoration: underline;
             border-bottom: 1px solid transparent;
             transition: all 0.2s ease;
         }
@@ -138,6 +138,14 @@
         a:hover {
             color: var(--primary-red);
             border-bottom-color: var(--primary-red);
+        }
+
+        .nav-menu a {
+            text-decoration: none;
+        }
+
+        .nav-menu a:hover {
+            text-decoration: underline;
         }
 
         .resources-section {
