Update sustainable air travel link to Sustainable Travel Organization

--- a/sustainability-approach.html
+++ b/sustainability-approach.html
@@ -220,6 +220,7 @@
                 <li>Strategic alignment of field research with existing community healthcare schedules</li>
                 <li>Priority recruitment from local communities for field-based research positions</li>
                 <li>Institute-wide virtual-first meeting policy, with travel decisions guided by the <a href="https://www.sustainabilityexchange.ac.uk/travel_better_package" target="_blank">Sustainability Exchange Travel Better package</a></li>
+                <li>Sustainable travel strategies, including <a href="https://sustainabletravel.org/individuals/travel-better/?utm_source=chatgpt.com" target="_blank">minimizing air travel emissions</a> and prioritizing remote collaboration technologies</li>
             </ul>
 
             <h3>Accountability</h3>
