--- a/sustainability-approach.html
+++ b/sustainability-approach.html
@@ -219,7 +219,7 @@
             <ul class="commitment-list">
                 <li>Strategic alignment of field research with existing community healthcare schedules</li>
                 <li>Priority recruitment from local communities for field-based research positions</li>
-                <li>Institute-wide virtual-first meeting policy, with travel decisions guided by the <a href="https://www.sustainabilityexchange.ac.uk/travel_better_package" target="_blank">Sustainability Exchange Travel Better package</a></li>
+                <li>Institute-wide virtual-first meeting policy, with travel decisions guided by sustainability best practices</li>
                 <li>Sustainable travel strategies, including <a href="https://sustainabletravel.org/individuals/travel-better/?utm_source=chatgpt.com" target="_blank">minimizing air travel emissions</a> and prioritizing remote collaboration technologies</li>
             </ul>
 
